push all changed to GitHub