@@ -1,16 +1,30 @@
+package bonus;
+
+import lombok.Data;
 import lombok.RequiredArgsConstructor;
 
+import java.security.Provider;
 import java.time.LocalTime;
 import java.time.ZonedDateTime;
 import java.util.*;
 import java.util.stream.Collectors;
 
+@Data
 @RequiredArgsConstructor
 public class ShopService {
 
-     private ProductRepo productRepo = new ProductRepo();
-     private OrderRepo orderRepo = new OrderMapRepo();
+    // private ProductRepo productRepo = new ProductRepo();
+    // private OrderRepo orderRepo = new OrderMapRepo();
 
+    private IdService uuid;
+    private ProductRepo productRepo;
+    private OrderRepo orderRepo;
+
+    public ShopService(IdService uuid, ProductRepo productRepo, OrderRepo orderRepo) {
+        this.uuid = uuid;
+        this.productRepo = productRepo;
+        this.orderRepo = orderRepo;
+    }
 
     public Order addOrder(List<String> productIds) {
 
@@ -19,6 +33,7 @@ public class ShopService {
         for (String productId : productIds) {
             Optional<Product> productToOrder = productRepo.getProductById(productId);
             if (productToOrder.isEmpty()) {
+                // System.out.println("Product mit der Id: " + productId + " konnte nicht bestellt werden!");
                 throw new NoSuchElementException("Product mit der Id: "+ productId + " konnte nicht bestellt werden!");
             }
             products.add(productToOrder.get());
@@ -30,14 +45,21 @@ public class ShopService {
     }
 
 
-    public List<Order> getOrdersWithStatus(OrderStatus orderStatus){
+    public List<Order> getOrdersWithStatus(){
 
         OrderListRepo orderListRepo = new OrderListRepo();
-        return orderListRepo.getOrders().stream().filter(order -> order.orderStatus().equals(orderStatus)).toList();
+
+        return orderListRepo.getOrders().stream().collect(Collectors.toList());
+    }
+
+    public Map<String, Order> getOldestOrderPerStatus(OrderStatus orderStatus){
+
+
+           return null;
     }
 
 
-     public Optional<Order> updateOrder(String orderId, OrderStatus  orderStatus){
+    public void  updateOrder(String orderId, OrderStatus orderStatus){
 
        Optional<Order> orderById = Optional.ofNullable(orderRepo.getOrderById(orderId));
 
@@ -47,9 +69,6 @@ public class ShopService {
            Order newOrder = order.withOrderStatus(orderStatus);
            orderRepo.removeOrder(orderId);
            orderRepo.addOrder(newOrder);
-           return Optional.of(newOrder);
-       }else {
-           return Optional.empty();
        }
 
      }
